파일 경로에 맞춰 재설정